--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ai-publishing-nexus</title>
+    <title>Social Media Agent</title>
     <meta name="description" content="AI Publishing Nexus - Social Media Management Platform" />
     <meta name="author" content="AI Publishing Nexus" />
 
